# agh-avader-mocap

./: README.md  pyproject.toml
configs/: camera.yaml  nano_cam.yaml  server.yaml
mocap/camera/: __init__.py  basler_cam.py  mqtt.py  multithread.py  tools.py
mocap/server/: __init__.py  imagezmq.py  server.py  tools.py
tests/: test.py  test_nano.py  test_pc.py
